--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@types/react": "17.0.24",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.2",
+    "husky": "^4.3.8",
+    "lint-staged": "^11.1.2",
     "typescript": "4.4.3"
   },
   "lint-staged": {
-    "**/*.{ts,tsx}": "npm run lint:fix"
+    "**/*.{ts,tsx}": "npm run lint"
   },
   "husky": {
     "hooks": {
