--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "next": "11.1.2",
+    "firebase": "^9.6.4",
+    "next": "^12.0.8",
     "postcss": "^8.3.8",
     "prettier": "^2.4.1",
     "react": "17.0.2",
